--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,14 +1,59 @@
+.about {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+.skills h3::after {
+    content: '';
+    width: 80px;
+    height: 3px;
+    display: block;
+    background: #ec0086;
+}
+.my-description p {
+    margin-top: 50px;
+    line-height: 25px;
+    word-spacing: 1.5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 300;
+}
+.skill {
+    margin-top: 50px;
+}
 .react {
+    width: 75%;
+}
+.html {
+    width: 90%;
+}
+.css {
+    width: 90%;
+}
+.node {
+    width: 60%;
+}
+.java {
     width: 80%;
+}
+.mongo {
+    width: 70%;
+}
+.express {
+    width: 55%;
+}
+.progress-bar {
+    width: 100%;
     height: 25px;
+    border-radius: 3px;
     background-color: #ec0086;
-    animation: progress 2s ease 0.1s;
+    padding-right: 8px;
+    animation: progress 2s ease;
 }
 @keyframes progress {
     0% {
         width: 0%;
     }
     100% {
-        width: 80%;
+        width: 100%;
     }
 }
