--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -1,24 +1,15 @@
 .resume {
     padding-top: 40px;
 }
-.title-box {
-    border-right: 1px solid #b8d1fa;
-    margin-top: 15px;
-    padding-right: 20px;
-    width: 400px;
-    text-align: right;
-}
-.experience {
-    margin-top: -15px;
-    height: 24px;
-}
-.title-box h5::after {
-    content: "";
-    display: inline-block;
+.resume h3::after {
+    content: '⦿';
+    font-size: 14px;
+    color: #ec0086;
+    margin-left: 10px;
     position: relative;
-    left: 21px;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: #ec0086;
+    right: -7px;
+    top: -3px;
+}
+.title-box {
+    border-right: 1px solid gray;
 }
